sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:16: error: value =- is not a member of Int
          j=-1
           ^